Make the CB prefix opcodes, and correct serial, now it displays something (unfortunately the cpu seems to be failing but we are making progress)

--- a/source/.vscode/settings.json
+++ b/source/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "opcodes.h": "c"
+        "opcodes.h": "c",
+        "cwchar": "c",
+        "limits": "c"
     }
 }
