Continue working on the ppu, and correct the use of CB instructions

--- a/source/.vscode/settings.json
+++ b/source/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "files.associations": {
-        "opcodes.h": "c",
-        "cwchar": "c",
-        "limits": "c"
-    }
+  "files.associations": {
+    "opcodes.h": "c",
+    "cwchar": "c",
+    "limits": "c",
+    "constants.h": "c"
+  }
 }
